--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mysql2": "^3.4.5"
   },
   "scripts": {
     "start": "node server.js"
@@ -8,7 +11,6 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "keywords": [],
   "author": "",
   "license": "ISC",
