--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.4.5"
+    "mysql2": "^3.4.5",
+    "openai": "^3.3.0"
   },
   "scripts": {
     "start": "node server.js"
