--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@ DB_HOST=sql9.freesqldatabase.com
 DB_USER=sql9630763
 DB_PASSWORD=mlcBqLwMLe
 DB_DATABASE=sql9630763
+
+OPENAI_API_KEY=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
+
