A book created with pages and an AI paragraph with in each pages and stord to the sqldbb

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,12 @@
-DB_HOST=sql9.freesqldatabase.com
-DB_USER=sql9630763
-DB_PASSWORD=mlcBqLwMLe
-DB_DATABASE=sql9630763
+1DB_HOST=sql9.freesqldatabase.com
+1DB_USER=sql9630763
+1DB_PASSWORD=mlcBqLwMLe
+1DB_DATABASE=sql9630763
 
-OPENAI_API_KEY=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
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=Almahdi@12
+DB_DATABASE=child_book_db
+
+OPENAI_API_KEY=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
 
