deleting book with existing pages

--- a/backend/.env
+++ b/backend/.env
@@ -8,5 +8,5 @@ DB_USER=root
 DB_PASSWORD=Almahdi@12
 DB_DATABASE=child_book_db
 
-OPENAI_API_KEY=sk-gRQKNl55YHkjxOeGK95QT3BlbkFJ2ol2QL62x3bg77afI76KA
+OPENAI_API_KEY=a
 
