--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=Almahdi@12
+DB_PASSWORD=
 DB_DATABASE=mydb1
 DB_TYPE=mysql
 OPENAI_API_KEY=
