--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/multer": "^1.4.7",
     "@types/pino": "^7.0.5",
     "bcrypt": "^5.1.1",
     "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
     "openai": "^3.3.0",
     "typeorm": "^0.3.17",
