--- a/backend/package.json
+++ b/backend/package.json
@@ -15,11 +15,14 @@
     "bcrypt": "^5.1.1",
     "config": "^3.3.9",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.39.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
     "openai": "^3.3.0",
+    "pdfkit": "^0.13.0",
+    "streamifier": "^0.1.1",
     "typeorm": "^0.3.17",
     "winston": "^3.10.0"
   },
@@ -29,6 +32,8 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.1",
+    "@types/pdfkit": "^0.12.12",
+    "@types/streamifier": "^0.1.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
