--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,14 @@
     "bcrypt": "^5.1.1",
     "config": "^3.3.9",
     "cors": "^2.8.5",
-    "docxtemplater": "^3.39.1",
+    "docxtemplater": "^3.39.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
     "openai": "^3.3.0",
     "pdfkit": "^0.13.0",
+    "pizzip": "^3.1.4",
     "streamifier": "^0.1.1",
     "typeorm": "^0.3.17",
     "winston": "^3.10.0"
