--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "jwks-rsa": "^3.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
     "openai": "^3.3.0",
