my first template code for test

--- a/backend/.env
+++ b/backend/.env
@@ -4,9 +4,19 @@
 1DB_DATABASE=sql9630763
 
 DB_HOST=localhost
+DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=Almahdi@12
-DB_DATABASE=child_book_db
+DB_DATABASE=mydb
+DB_TYPE = mysql
 
-OPENAI_API_KEY=a
+OPENAI_API_KEY=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
 
+
+AUTH0_SECRET= replace-with-your-own-secret-generated-with-openssl
+AUTH0_BASE_URL='http://localhost:3000'
+AUTH0_ISSUER_BASE_URL='https://children-book.us.auth0.com'
+AUTH0_CLIENT_ID='Nn6YiHdrbAY1uHXPQDNuxyNYF4IJgTph'
+AUTH0_CLIENT_SECRET='CJhVKDTvQIBIOPER-aPM-ZRZeYHfHmbUh488JUtmRxIB3VepT4KAfnLh8E-KGyvl'
+AUTH0_AUDIENCE=https://children-book.us.auth0.com/api/v2/
+AUTH0_SCOPE='openid profile'
