--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,43 @@
 {
+  "name": "yes",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "nodemon --config nodemon.json src/app.ts"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/pino": "^7.0.5",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.1",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.4.5",
-    "openai": "^3.3.0"
+    "express-jwt": "^8.4.1",
+    "express-openid-connect": "^2.16.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.1",
+    "jwks-rsa": "^3.0.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.5.1",
+    "openai": "^3.3.0",
+    "typeorm": "^0.3.17",
+    "winston": "^3.10.0"
   },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/express-jwt": "^7.4.2",
+    "@types/node": "^20.5.1",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  }
 }
