--- a/backend/package.json
+++ b/backend/package.json
@@ -11,16 +11,23 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/multer": "^1.4.7",
+    "@types/office-js": "^1.0.348",
     "@types/pino": "^7.0.5",
     "bcrypt": "^5.1.1",
     "config": "^3.3.9",
     "cors": "^2.8.5",
+    "docx": "^8.2.3",
     "docxtemplater": "^3.39.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "html-docx-js": "^0.3.1",
+    "mammoth": "^1.6.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
+    "officegen": "^0.6.5",
     "openai": "^3.3.0",
+    "path": "^0.12.7",
     "pdfkit": "^0.13.0",
     "pizzip": "^3.1.4",
     "streamifier": "^0.1.1",
@@ -32,11 +39,12 @@
     "@types/config": "^3.3.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/html-docx-js": "^0.3.2",
     "@types/node": "^20.4.1",
     "@types/pdfkit": "^0.12.12",
     "@types/streamifier": "^0.1.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   }
 }
