--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "mailtrap": "^3.2.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
+    "nodemailer": "^6.9.6",
     "openai": "^3.3.0",
     "path": "^0.12.7",
     "pdfkit": "^0.13.0",
@@ -35,6 +37,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.1",
+    "@types/nodemailer": "^6.4.11",
     "@types/pdfkit": "^0.12.12",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
