--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,7 @@ DB_PASSWORD=
 DB_DATABASE=mydb1
 DB_TYPE=mysql
 OPENAI_API_KEY=
+SMTP_HOST=smtp.gmail.com
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=TinyTaleCreators@gmail.com
