--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/formidable": "^3.4.4",
     "@types/multer": "^1.4.7",
     "@types/pino": "^7.0.5",
     "bcrypt": "^5.1.1",
@@ -17,7 +18,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "express-oauth2-jwt-bearer": "^1.5.0",
+    "formidable": "^3.5.1",
+    "jwks-rsa": "^3.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
     "openai": "^3.3.0",
