--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.43.0",
     "eslint-config-next": "^13.4.7",
     "formik": "^2.4.2",
+    "http-proxy": "^1.18.1",
     "next": "^13.5.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -34,5 +35,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/http-proxy": "^1.17.13"
   }
 }
