--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "docx": "^8.2.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "jwks-rsa": "^3.0.1",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.1",
