--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --config nodemon.json src/app.ts",
-    "vercel-build": "echo hello"
+    "build": "netlify deploy --prod"
   },
   "author": "",
   "license": "ISC",
@@ -31,7 +31,9 @@
     "path": "^0.12.7",
     "pdfkit": "^0.13.0",
     "typeorm": "^0.3.17",
-    "winston": "^3.10.0"
+    "winston": "^3.10.0",
+    "netlify-lambda": "^1.4.3",
+    "serverless-http": "^1.9.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
