--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,3 +3,4 @@ AUTH0_BASE_URL='http://localhost:3000'
 AUTH0_ISSUER_BASE_URL=''
 AUTH0_CLIENT_ID=''
 AUTH0_CLIENT_SECRET=''
+NEXT_PUBLIC_BACKEND_URL="http://localhost:5001"
