--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,4 +3,6 @@ AUTH0_BASE_URL='http://localhost:3000'
 AUTH0_ISSUER_BASE_URL=''
 AUTH0_CLIENT_ID=''
 AUTH0_CLIENT_SECRET=''
+AUTH0_AUDIENCE=
 NEXT_PUBLIC_BACKEND_URL="http://localhost:5001"
+NEXT_PUBLIC_DOMAIN="0.0.0.0"
