--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
+    "firebase": "^10.5.2",
     "fs": "^0.0.1-security",
     "jwks-rsa": "^3.0.1",
     "multer": "^1.4.5-lts.1",
