--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,9 @@ AUTH0_CLIENT_ID=''
 AUTH0_CLIENT_SECRET=''
 AUTH0_AUDIENCE=
 AUTH0_SCOPE='openid profile'
+FIREBASE_APIKEY=
+FIREBASE_AUTHDOMAIN=
+FIREBASE_PROJECTID=
+FIREBASE_STORAGEBUCKET=
+FIREBASE_MESSAGINGSENDERID=
+FIREBASE_APPID=
