--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,4 +5,4 @@ AUTH0_CLIENT_ID=''
 AUTH0_CLIENT_SECRET=''
 AUTH0_AUDIENCE=
 NEXT_PUBLIC_BACKEND_URL="http://localhost:5001"
-NEXT_PUBLIC_DOMAIN="0.0.0.0"
+NEXT_PUBLIC_DOMAIN="localhost"
