--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -6,3 +6,10 @@ AUTH0_CLIENT_SECRET=''
 AUTH0_AUDIENCE=
 NEXT_PUBLIC_BACKEND_URL="http://localhost:5001"
 NEXT_PUBLIC_DOMAIN="localhost"
+NEXT_PUBLIC_DOMAIN=
+NEXT_PUBLIC_FIREBASE_APIKEY=
+NEXT_PUBLIC_FIREBASE_AUTHDOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECTID=
+NEXT_PUBLIC_FIREBASE_STORAGEBUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGINGSENDERID=
+NEXT_PUBLIC_FIREBASE_APPID=
