Feat delete user

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,6 +16,10 @@ AUTH0_CLIENT_ID=''
 AUTH0_CLIENT_SECRET=''
 AUTH0_AUDIENCE=
 AUTH0_SCOPE='openid profile'
+
+AUTH0_API_CLIENT_ID=
+AUTH0_API_CLIENT_SECRET=
+
 FIREBASE_APIKEY=
 FIREBASE_AUTHDOMAIN=
 FIREBASE_PROJECTID=
