--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,10 @@
-AUTH0_SECRET=
-AUTH0_BASE_URL='http://localhost:3000'
-AUTH0_ISSUER_BASE_URL=''
-AUTH0_CLIENT_ID=''
-AUTH0_CLIENT_SECRET=''
-AUTH0_AUDIENCE=
+NEXT_PUBLIC_AUTH0_SECRET=
+NEXT_PUBLIC_AUTH0_BASE_URL='http://localhost:3000'
+NEXT_PUBLIC_DOMAIN_AUTH=
+NEXT_PUBLIC_AUTH0_CLIENT_ID=
+NEXT_PUBLIC_AUTH0_CLIENT_SECRET=
+NEXT_PUBLIC_AUTH0_AUDIENCE=
+NEXT_PUBLIC_AUTH0_SCOPE='openid profile'
 NEXT_PUBLIC_BACKEND_URL="http://localhost:5001"
 NEXT_PUBLIC_DOMAIN="localhost"
 NEXT_PUBLIC_DOMAIN=
