--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "openai": "^3.3.0",
     "path": "^0.12.7",
     "pdfkit": "^0.13.0",
+    "stripe": "^14.7.0",
     "typeorm": "^0.3.17",
     "winston": "^3.10.0",
     "yup": "^1.3.2"
