color picker added

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -26,3 +26,5 @@ FIREBASE_PROJECTID=
 FIREBASE_STORAGEBUCKET=
 FIREBASE_MESSAGINGSENDERID=
 FIREBASE_APPID=
+FRONTEND_URL='http://localhost:3000'
+STRIPE_API_KEY=
