--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,10 @@
     "firebase": "^10.6.0",
     "formik": "^2.4.2",
     "http-proxy": "^1.18.1",
-    "next": "^14.0.3",
+    "next": "^14.0.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-color-palette": "^7.1.0",
     "react-dom": "18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-query": "^3.39.3",
