--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
+    "xlsx": "^0.18.5",
     "yup": "^1.2.0"
   },
   "devDependencies": {
